# LangchainClassifier

./: .gitignore  .pre-commit-config.yaml  README.md  classification_results.json  claude_inference.py  data_viz.py  flash_test.py  inference.py  prototype.py  pyproject.toml  ritch_test.py
data/: koinly_example.csv
langchainclassifier/: __init__.py  data_models.py  processing.py
