[project]
name = "langchainclassifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.43.0",
    "fastapi>=0.115.6",
    "ipywidgets>=8.1.5",
    "langchain-anthropic>=0.3.1",
    "langchain-community>=0.3.14",
    "langchain>=0.3.14",
    "polars>=1.19.0",
    "pyarrow>=19.0.0",
    "pydantic>=2.10.5",
    "python-dotenv>=1.0.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "widgetsnbextension>=4.0.13",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
